css/main.css
* {
  font-family: 'Roboto Condensed', sans-serif;

}

#site-header {
  background-color: tomato;
}
h1 {
  padding: 50px;
  color: whitesmoke;
  font-size: 70px;
}
#navigation {
  background: rgba(0, 0, 0, 0.4);
  font-size: 30px;
  color: whitesmoke;
}
#main {
  font-size: 20px;
}

#navlink {
  color: whitesmoke;
}
#content {
  padding: 10px 0 20px 0;
}
#sidebar-post {
  color: tomato;
}
#copyright {
  padding-bottom:10px;
}
@media (max-width: 768px) {
  h1 {
    font-size: 30px;
    padding: 10px;
  }
  #navigation {
    font-size: 15px;
  }
}
html {
    position: relative;
    min-height: 100%;
  }
body {
    /* Margin bottom by footer height */
    margin-bottom: 160px;
  }
.footer {
    position: absolute;
    bottom: 0;
    width: 100%;
    /* Set the fixed height of the footer here */
    height: 160px;
    background-color: #f5f5f5;
    padding-top: 20px;
    background-color: rgba(0, 0, 0, 0.5);
  }

